--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,18 @@ services:
       MYSQL_PASSWORD: password
     ports:
       - "3306:3306"
+  postgres:
+    image: postgres
+    restart: always
+    platform: linux/amd64
+    volumes:
+      - postgres_volume:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: ccd
+      POSTGRES_USER: ccd
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
 volumes:
   mysql_volume:
+  postgres_volume:
